# Generated by Django 5.0.1 on 2024-01-25 14:32

import banks.models.bank
import datetime
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Bank',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50)),
                ('short', models.CharField(max_length=5)),
                ('color', banks.models.bank.ColorField(default='#ffffff', max_length=10)),
                ('logo', models.ImageField(blank=True, upload_to='banks/logos')),
            ],
        ),
        migrations.CreateModel(
            name='BankAccount',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('account_type', models.CharField(choices=[('CC', 'Checking Account'), ('ESP', 'Cash Account'), ('LA', '`A` Booklet'), ('LEP', 'Popular Booklet'), ('SE', 'Stock Exchange')], default='CC', max_length=5)),
                ('iban', models.CharField(default='', max_length=27)),
                ('close_date', models.DateField(default=datetime.date(2199, 12, 31))),
                ('bootstrap_color', models.CharField(choices=[('danger', 'Red'), ('dark', 'DarkGrey'), ('info', 'Cyan'), ('light', 'LightGrey'), ('primary', 'Blue'), ('secondary', 'Grey'), ('success', 'Green'), ('warning', 'Orange')], default='primary', max_length=10)),
                ('bank', models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='banks.bank')),
                ('owners', models.ManyToManyField(default=None, to=settings.AUTH_USER_MODEL)),
                ('users', models.ManyToManyField(default=None, related_name='accesses', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='PayMedia',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('media_type', models.CharField(choices=[('CB', 'Card'), ('CHQ', 'Cheque'), ('VRT', 'Transfer'), ('ESP', 'Cash'), ('TIP', 'Interbank')], default='CB', max_length=3)),
                ('comment', models.CharField(max_length=200)),
                ('debit_type', models.CharField(choices=[('I', 'Immediate'), ('D', 'Deferred')], default='I', max_length=1)),
                ('care_day', models.PositiveSmallIntegerField(default=20)),
                ('nb_deferred_days', models.PositiveSmallIntegerField(default=40)),
                ('expire_date', models.DateField(default=datetime.date(2199, 12, 31))),
                ('bank_account', models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='banks.bankaccount')),
            ],
        ),
        migrations.CreateModel(
            name='Operation',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('completion_date', models.DateField()),
                ('value_date', models.DateField()),
                ('old_id', models.IntegerField(default=-1)),
                ('comment', models.CharField(max_length=100)),
                ('amount', models.DecimalField(decimal_places=2, max_digits=9)),
                ('state', models.CharField(choices=[('C', 'Check'), ('D', 'Done'), ('U', 'Upcoming')], default='U', max_length=1)),
                ('frequency', models.CharField(choices=[('N', 'None'), ('M', 'Monthly'), ('Q', 'Quaterly'), ('H', 'Halfyearly'), ('Y', 'Yearly')], default='N', max_length=1)),
                ('paymedia', models.ForeignKey(default=1, on_delete=django.db.models.deletion.CASCADE, to='banks.paymedia')),
            ],
        ),
    ]
